--- a/css/style.css
+++ b/css/style.css
@@ -94,11 +94,23 @@ img{
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   padding: 20px 30px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin-top: 15px;
-  max-width: 320px;
+  text-align: center;
+  max-width: 420px;
   width: 100%;
+}
+
+.form-section img{
+  margin: 0 auto 20px auto;
+  display: block;
+}
+
+.pj{
+  width: 300px;
+  height: 180px;
 }
 
 .form-section label {
@@ -107,7 +119,6 @@ img{
 }
 
 .form-section input {
-  display: block;
   width: 100%;
   max-width: 200px;
   margin-top: 5px;
@@ -118,14 +129,15 @@ img{
 
 .form-section button{
   background-color: red;
+  margin: 0 auto 10px;
   color: white;
   border: none;
   padding: 8px 16px;
   font-weight: bold;
   cursor: pointer;
-  margin-top: 10px;
   border-radius: 10px;
   transition: background-color 0.5s;
+  margin-bottom: 50px;
 }
 
 .form-section button:hover{
