--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,63 @@ img{
 
 .pilihanSegitiga button:hover{
   background-color: green;
+  color: white;
+}
+
+.pilihanPersegi{
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.pilihanPersegi button{
+  background-color: lightGreen;
+  margin: 6px;
+  border-radius: 20px;
+  padding: 5px;
+  border: none;
+  color: white
+  cursor: pointer;
+  transition: background-color 0.5s;
+  margin-bottom: 20px;
+}
+
+.pilihanPersegi button:hover{
+  background-color: green;
+  color: white;
+}
+
+.pilihanPersegiPanjang{
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.pilihanPersegiPanjang button{
+  background-color: lightGreen;
+  margin: 6px;
+  border-radius: 20px;
+  padding: 5px;
+  border: none;
+  color: white
+  cursor: pointer;
+  transition: background-color 0.5s;
+  margin-bottom: 20px;
+}
+
+.pilihanPersegiPanjang button:hover{
+  background-color: green;
+  color: white;
+}
+
+.hitung{
+  background-color: skyBlue;
+  transition: background-color 0.5s;
+}
+
+.hitung:hover{
+  background-color: blue;
+  color: white;
 }
 
 .form-section{
@@ -125,23 +182,45 @@ img{
   padding: 5px;
   border-radius: 10px;
   box-sizing: border-box;
+  display: inline;
 }
 
 .form-section button{
-  background-color: red;
   margin: 0 auto 10px;
-  color: white;
   border: none;
   padding: 8px 16px;
   font-weight: bold;
   cursor: pointer;
   border-radius: 10px;
   transition: background-color 0.5s;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
-.form-section button:hover{
-  background-color: #1976d2
+.form-group {
+  display: flex;
+  align-items: center;
+  margin-left: 60px;
+  justify-content: space-between;
+  max-width: 300px;
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+.hasil{
+  background-color: yellow;
+  font-weight: bold;
+  padding: 5px;
+  width: 100%;
+  border-radius: 20px;
+  border: solid 2px;
+  border-color: black;
+  display: none;
+}
+
+.rumus{
+  font-weight: bold;
+  margin-top: 10px;
+  padding-bottom: 20px;
 }
 
 input[type=number]::-webkit-outer-spin-button,
